working on orders

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_DB_URI=mongodb+srv://hellobibek:pass123@cluster0.eqie3i2.mongodb.net/
+# MONGO_DB_URI=mongodb+srv://hellobibek:pass123@cluster0.eqie3i2.mongodb.net/
+MONGO_DB_URI=mongodb://localhost:27017/
 
 PORT=5000
 
